--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "bundleDependencies": false,
   "dependencies": {
-    "@waves/waves-api": "0.28.4",
+    "@waves/waves-api": "git+https://github.com/pongonetworks/pongo-api.git",
     "cli-color": "^1.3.0",
     "nanobench": "^2.1.1",
     "nd-promise": "^3.1.0",
